# automate-interior-ai-service

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  cloudbuild.yaml  docker-run.sh  msg.json  pyproject.toml  readme.md  ruff.toml  run_tests.sh  setup-cloudbuild.sh  test_pubsub.sh  test_simple.sh
app/: __init__.py  config.py  main.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py
app/models/: __init__.py  client_data.py  client_profile.py  email_models.py
app/routers/: health.py  webhooks.py
app/services/: email_service.py  genai_service.py  message_tracker.py  pubsub_service.py
app/utils/: auth.py  errors.py  logging.py  validators.py
infrastructure/: main.tf  outputs.tf  variables.tf  versions.tf
infrastructure/environments/: dev.tfvars  prod.tfvars
infrastructure/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infrastructure/modules/pubsub/: main.tf  outputs.tf  variables.tf
infrastructure/modules/service_account/: main.tf  outputs.tf  variables.tf
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_health_integration.py
tests/unit/: test_config.py  test_errors.py  test_health.py  test_main.py  test_models.py  test_validators.py  test_webhooks.py
